<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Totum</string>

    <string name="destination_videos">Videos</string>
    <string name="destination_podcasts">Podcasts</string>
    <string name="destination_queue">Queue</string>
    <string name="destination_search">Search</string>
    <string name="destination_music">Music</string>
    <string name="destination_library">Library</string>
    <string name="destination_account">Account</string>

...
